--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
         <div class="container">
             <div class="input">0</div>
             <div class="buttons">
-                <button value="mc" class="grey">mc</button>
-                <button value="m+" class="grey">m+</button>
-                <button value="m-" class="grey">m-</button>
-                <button value="mr" class="grey">mr</button>
-                <button value="c" class="brown">c</button>
+                <button value="c" class="brown">AC</button>
                 <button value="+/-" class="brown">+/-</button>
                 <button value="%" class="brown">%</button>
-                <button value="x" class="brown">x</button>
+                <button value="x" class="brown">/</button>
                 <button value="7">7</button>
                 <button value="8">8</button>
                 <button value="9">9</button>
-                <button value="-" class="brown">-</button>
+                <button value="-" class="brown">*</button>
                 <button value="4">4</button>
                 <button value="5">5</button>
                 <button value="6">6</button>
-                <button value="+" class="brown">+</button>
+                <button value="+" class="brown">-</button>
                 
                 <button value="1">1</button>
                 <button value="2">2</button>
                 <button value="3">3</button>
-                <button value="=" class="equal">=</button>
+                <button value="x" class="brown">+</button>
+
                 <button value="0" class="zero">0</button>
                 <button value=".">.</button>
+                <button value="=" class="equal">=</button>
+
             </div>
         </div>
     </div>  
