--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
         <div class="container">
             <div class="input">0</div>
             <div class="buttons">
-                <button value="c" class="brown">AC</button>
+                <button value="AC" class="brown">AC</button>
                 <button value="+/-" class="brown">+/-</button>
                 <button value="%" class="brown">%</button>
-                <button value="x" class="brown">/</button>
+                <button value="/" class="brown">/</button>
+
                 <button value="7">7</button>
                 <button value="8">8</button>
                 <button value="9">9</button>
-                <button value="-" class="brown">*</button>
+                <button value="*" class="brown">*</button>
+
                 <button value="4">4</button>
                 <button value="5">5</button>
                 <button value="6">6</button>
-                <button value="+" class="brown">-</button>
+                <button value="-" class="brown">-</button>
                 
                 <button value="1">1</button>
                 <button value="2">2</button>
                 <button value="3">3</button>
-                <button value="x" class="brown">+</button>
+                <button value="+" class="brown">+</button>
 
                 <button value="0" class="zero">0</button>
                 <button value=".">.</button>
