--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            <div class="input">0</div>
+            <input type="text" class="input" value="" disabled />
             <div class="buttons">
-                <button value="AC" class="brown">AC</button>
-                <button value="+/-" class="brown">+/-</button>
-                <button value="%" class="brown">%</button>
-                <button value="/" class="brown">/</button>
+                <button value="AC" class="brown clear">AC</button>
+                <button value="DEL" class="brown delete">DEL</button>
+                <button value="+/-" class="brown plusMinus">+/-</button>
+                <button value="%" class="brown percent">%</button>
 
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="*" class="brown">*</button>
+                <button value="7" class="number">7</button>
+                <button value="8" class="number">8</button>
+                <button value="9" class="number">9</button>
+                <button value="/" class="brown operator">/</button>
 
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="-" class="brown">-</button>
+                <button value="4" class="number">4</button>
+                <button value="5" class="number">5</button>
+                <button value="6" class="number">6</button>
+                <button value="*" class="brown operator">*</button>
                 
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="+" class="brown">+</button>
+                <button value="1" class="number">1</button>
+                <button value="2" class="number">2</button>
+                <button value="3" class="number">3</button>
+                <button value="-" class="brown operator">-</button>
 
-                <button value="0" class="zero">0</button>
-                <button value=".">.</button>
-                <button value="=" class="equal">=</button>
-
+                <button value="0" class="zero number">0</button>
+                <button value="." class="decimal">.</button>
+                <button value="=" class="equal operator">=</button>
+                <button value="+" class="brown operator">+</button>
             </div>
         </div>
     </div>  
